Fix a few bugs and improve test coverage
Bugs in:
- `InfiniteEmptyLoop`
- `PreferPrefixIncrement`
- `RedundantCast`
- `SwitchCaseOrder`