@@ -3,6 +3,8 @@ package com.etk2000.checkstyle;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertTrue;
 
+import com.puppycrawl.tools.checkstyle.api.SeverityLevel;
+
 import org.junit.Test;
 
 public class NoUnnecessaryThisCheckTest {
@@ -40,8 +42,14 @@ public class NoUnnecessaryThisCheckTest {
 	@Test
 	public void testUnnecessaryFieldAccess() throws Exception {
 		final var violations = BaseCheckTest.runCheck(NoUnnecessaryThisCheck.class, DIR + "InputThisViolation.java");
-		assertEquals(1, violations.size());
-		assertEquals(7, violations.getFirst().getLine());
-		assertEquals("Unnecessary 'this.field', only use when shadowing or in field assignment.", violations.getFirst().getMessage());
+		assertEquals(2, violations.size());
+		// compact record constructor: this.field in non-assignment context
+		assertEquals(5, violations.get(0).getLine());
+		assertEquals(SeverityLevel.ERROR, violations.get(0).getSeverityLevel());
+		assertEquals("Unnecessary 'this.field', only use when shadowing or in field assignment.", violations.get(0).getMessage());
+		// regular class: this.field without shadowing
+		assertEquals(13, violations.get(1).getLine());
+		assertEquals(SeverityLevel.ERROR, violations.get(1).getSeverityLevel());
+		assertEquals("Unnecessary 'this.field', only use when shadowing or in field assignment.", violations.get(1).getMessage());
 	}
 }
